--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
+clap = "3.2.22"
 futures = "0.3.24"
 tokio = { version = "1.21.1", features = ["full"] }
 yahoo_finance_api = "1.3.0"
