added description and license info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "portfolio_rs"
+description = "A command line tool for managing financial investment portfolios written in Rust."
+readme = "README.md"
 version = "0.1.0"
 edition = "2021"
+license = "MIT" 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
