--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ clap = "3.2.22"
 futures = "0.3.24"
 tokio = { version = "1.21.1", features = ["full"] }
 yahoo_finance_api = "1.3.0"
+piechart = "1.0.0"
