--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ futures = "0.3.24"
 tokio = { version = "1.21.1", features = ["full"] }
 yahoo_finance_api = "1.3.0"
 piechart = "1.0.0"
+chrono = "0.4.22"
+sled = "0.34.7"
