--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ piechart = "1.0.0"
 chrono = "0.4.23"
 sled = "0.34.7"
 colored = "2.0.0"
+confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
