--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures = "0.3.26"
 tokio = { version = "1.25.0", features = ["full"] }
 yahoo_finance_api = "1.4.0"
 piechart = "1.0.0"
+time = "0.3.0"
 chrono = "0.4.23"
 sled = "0.34.7"
 colored = "2.0.0"
