chore: polish repository and update documentation
Comprehensive repository cleanup and documentation improvements:

- Update README with current TUI features and edit functionality
- Enhance Cargo.toml with proper metadata for crates.io
- Consolidate configuration documentation for clarity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "portfolio_rs"
-description = "A command line tool for managing financial investment portfolios written in Rust."
+description = "A command line tool with interactive TUI for managing financial investment portfolios written in Rust."
 readme = "README.md"
 version = "0.2.1"
 edition = "2021"
-license = "MIT" 
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
+authors = ["Markus Zoppelt"]
+repository = "https://github.com/MarkusZoppelt/portfolio_rs"
+keywords = ["finance", "portfolio", "tui", "investment", "cli"]
+categories = ["command-line-utilities", "finance"]
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
