chore: update dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ confy = { version = "1.0.0", features = ["yaml_conf"], default-features = false 
 ratatui = "0.28.1"
 crossterm = "0.28.1"
 tui-big-text = "0.6.0"
+comfy-table = "7"
