ci: auto-update

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,20 @@
 
 version: 2
 updates:
+  # Cargo dependencies
   - package-ecosystem: "cargo"
     directory: "/"
     schedule:
       interval: "weekly"
+    labels:
+      - "dependencies"
+      - "rust"
+
+  # GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    labels:
+      - "dependencies"
+      - "github-actions"
